--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta descripción agregada para mejorar SEO -->
+    <meta name="description" content="Portafolio personal de Dylan Acero, desarrollador de software enfocado en entornos virtuales y negocios digitales.">
     <title>Dylan Acero - Desarrollador de Software</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,13 +13,16 @@
 <!-- BARRA DE NAVEGACIÓN FIJA -->
 <header class="navbar">
     <div class="logo-container">
-        <!-- Tu foto de perfil -->
-        <img src="Image/WhatsApp Image 2025-10-02 at 11.58.19 AM(1).jpeg" alt="Foto de perfil de Dylan Acero" class="avatar-nav">
-        <a href="#" class="logo-link">
-            <img src="Image/Gemini_Generated_Image_dzvgl3dzvgl3dzvg.png" alt="Logotipo de Dylan Acero" class="logo-img">
+        <!-- Foto de perfil: tamaño aumentado en CSS para mayor presencia -->
+        <img src="Image/WhatsApp Image 2025-10-04 at 4.24.14 PM.jpeg"
+             alt="Foto de perfil de Dylan Acero" class="avatar-nav">
+        <!-- Logo enlaza al inicio -->
+        <a href="#" class="logo-link" aria-label="Inicio">
+            <img src="Image/Gemini_Generated_Image_dzvgl3dzvgl3dzvg.png"
+                 alt="Logotipo de Dylan Acero" class="logo-img">
         </a>
     </div>
-    <nav>
+    <nav aria-label="Menú principal"><!-- Se agregó aria-label para accesibilidad del menú -->
         <ul>
             <li><a href="#sobre-mi">Sobre Mí</a></li>
             <li><a href="#proyectos">Proyectos</a></li>
@@ -38,7 +43,12 @@
     <section id="sobre-mi">
         <h2>Sobre Mí</h2>
         <p>
-            Mi objetivo es aplicar y ampliar mis conocimientos técnicos para <strong>formar parte del éxito de las empresas</strong>. Soy un profesional responsable, honesto y con gran facilidad de aprendizaje, graduado de la Ingeniería en Entornos Virtuales y Negocios Digitales de la Universidad Tecnológica de Nezahualcóyotl. Busco un rol donde pueda contribuir y seguir creciendo en el área de desarrollo de software.
+            Mi objetivo es aplicar y ampliar mis conocimientos técnicos para
+            <strong>formar parte del éxito de las empresas</strong>. Soy un profesional
+            responsable, honesto y con gran facilidad de aprendizaje, graduado de la
+            Ingeniería en Entornos Virtuales y Negocios Digitales de la Universidad
+            Tecnológica de Nezahualcóyotl. Busco un rol donde pueda contribuir y seguir
+            creciendo en el área de desarrollo de software.
         </p>
     </section>
 
@@ -75,10 +85,12 @@
             <div class="card-proyecto">
                 <img src="ruta/a/imagen-tienda.jpg" alt="Sitio web de tienda de dulces">
                 <h3>Sitio Web E-commerce (Práctica)</h3>
-                <p>Desarrollo de un sitio web funcional para una tienda de dulces, aplicando habilidades de desarrollo front-end y back-end.</p>
+                <p>Desarrollo de un sitio web funcional para una tienda de
+                    dulces, aplicando habilidades de desarrollo front-end y back-end.</p>
                 <p class="tecnologias">Tecnologías: HTML, CSS, JavaScript</p>
                 <div class="links-proyecto">
-                    <a href="#" target="_blank">Ver Código</a>
+                    <!-- Agregado rel="noopener noreferrer" por seguridad al abrir en nueva pestaña -->
+                    <a href="#" target="_blank" rel="noopener noreferrer">Ver Código</a>
                 </div>
             </div>
 
@@ -86,20 +98,26 @@
             <div class="card-proyecto">
                 <img src="ruta/a/imagen-ra.jpg" alt="Aplicación de Realidad Aumentada">
                 <h3>App de Realidad Aumentada para Niños</h3>
-                <p>Creación de una app de RA con temática de huertos para usuarios infantiles, demostrando capacidad para desarrollar aplicaciones interactivas.</p>
+                <p>Creación de una app de RA con temática de huertos para
+                    usuarios infantiles, demostrando capacidad para desarrollar aplicaciones
+                    interactivas.</p>
                 <p class="tecnologias">Tecnologías: Unity, Vuforia, Blender</p>
                 <div class="links-proyecto">
-                    <a href="#" target="_blank">Ver Código</a>
+                    <a href="#" target="_blank" rel="noopener noreferrer">Ver Código</a>
                 </div>
             </div>
+
             <!-- Proyecto 3: Contenido Digital -->
             <div class="card-proyecto">
                 <img src="ruta/a/imagen-cemdi.jpg" alt="Diseño de contenido digital">
                 <h3>Creador de Contenido Digital (CEMDI)</h3>
-                <p>Diseño de contenido para redes sociales y apoyo en campañas de comunicación digital, manejando herramientas de diseño y la suite de Office.</p>
-                <p class="tecnologias">Tecnologías: Paquetería Office, Herramientas de diseño</p>
+                <p>Diseño de contenido para redes sociales y apoyo en campañas
+                    de comunicación digital, manejando herramientas de diseño y la suite de
+                    Office.</p>
+                <p class="tecnologias">Tecnologías: Paquetería Office,
+                    Herramientas de diseño</p>
                 <div class="links-proyecto">
-                    <a href="#" target="_blank">Ver Más</a>
+                    <a href="#" target="_blank" rel="noopener noreferrer">Ver Más</a>
                 </div>
             </div>
         </div>
@@ -108,8 +126,10 @@
     <!-- SECCIÓN DE CONTACTO -->
     <section id="contacto">
         <h2>Hablemos</h2>
-        <p>Estoy buscando activamente nuevas oportunidades. Si mi perfil es de tu interés, no dudes en contactarme.</p>
-        <a href="mailto:dylanacero318@gmail.com" class="btn">Enviar Correo Electrónico</a>
+        <p>Estoy buscando activamente nuevas oportunidades. Si mi perfil es de
+            tu interés, no dudes en contactarme.</p>
+        <a href="mailto:dylanacero318@gmail.com" class="btn">Enviar Correo
+            Electrónico</a>
     </section>
 </main>
 
