--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         combinando lógica, diseño y creatividad para convertir ideas en proyector reales.
         Disfruto aprender nuevas tecnologías, optimizar cada detalle y construir soluciones que conecten con las personas.
      </p>
-        <p><em>No soy un robot, pero paso suficiente tiempo con ellos.</em></p>
+        <p class="quote fancy">“No soy un robot, pero paso suficiente tiempo con ellos.”</p>
         <a href="#proyectos" class="btn">Ver mis Proyectos</a>
     </section>
 
